--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+    margin-bottom: 60px;
 }
 
 .heading-primary-main {
@@ -66,6 +67,7 @@ body {
     position: absolute;
     top: 40%;
     left: 50%;
+    text-align: center;
     transform: translate(-50%, -50%);
 }
 
@@ -97,4 +99,28 @@ body {
         opacity: 1;
         transform: translate(0);
     }
+}
+
+.btn:link, .btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all 200ms;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
+
+.btn-white {
+    background-color: #fff;
+    color: #777;
 }
