--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,18 @@ body {
     }
 }
 
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+
 .btn:link, .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
@@ -108,6 +120,30 @@ body {
     display: inline-block;
     border-radius: 100px;
     transition: all 200ms;
+    position: relative;
+    animation: moveInBottom 1s ease-out;
+}
+
+.btn::after {
+    content: "";
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 100px;
+    transition: all 400ms;
+    z-index: -1;
+}
+
+.btn:hover::after {
+    transform: scale(1.6);
+    opacity: 0;
+}
+
+.btn-white::after {
+    background-color: #fff;
 }
 
 .btn:hover {
